# AdvancedSoftwareBakery

./: .gitignore  Auslage.py  Backstube.py  Büro.py  Lager.py  Lieferant.py  README.md  Verkaufsraum.py  main.py  pyproject.toml  setup.py  sonar-project.properties  test_projekt.py  unittest.py
.github/workflows/: python-app.yml
.scannerwork/: report-task.txt
Auslage/: Auslage_Tresen.py  Kaffeemaschine.py  Kasse.py  Verkäufer_in.py
Backstube/: Bäcker_in.py  Rezepte.py
Büro/: Chef.py
Diagramme/: UML Klassendiagramm.txt  UML Sequenzdiagram Verkauf von Backwaren.txt  UML Use Case Verkäufer_in.txt
Diagramme/uml_scripts/: UML Klassendiagramm.txt  UML Sequenzdiagram Verkauf von Backwaren.txt  UML Use Case Verkäufer_in.txt
Functional Programming/: Functional_Programming.py  test_Functional_Programming.py
Lager/: Lagerbestand.py
Lieferant/: Lagerarbeiter.py  Lieferant.py  Preisliste.py
Verkaufsraum/: Kunde.py
src/AdvancedSoftwareBakery.egg-info/: PKG-INFO
src/main/: .coverage
src/main/Auslage/: AuslageTresen.py  Auslage_Tresen.py  Kaffeemaschine.py  Kasse.py  Preisliste.py  Verkaeufer.py  Verkäufer_in.py
src/main/Backstube/: Baecker.py  Bäcker_in.py  Rezepte.py
src/main/Buero/: Angestellte.py  Chef.py
src/main/Büro/: Angestellte.py  (+1 more)
src/test/: __init__.py
tests/Auslage/: test_Auslage_Tresen.py  test_Kaffeemaschine.py  test_Kasse.py
tests/Backstube/: test_Bäcker_in.py
tests/Büro/: test_Chef.py
tests/Lager/: test_Lagerbestand.py
tests/Lieferant/: test_Lagerarbeiter.py  test_Lieferant.py
tests/Verkaufsraum/: test_BestellungBuilder.py
(+29 files in other folders)
