[project]
name = "AdvancedSoftwareBakery"
version = "0.0.1"
requires-python = ">= 3.8"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/main", "tests"]
[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = [
    "--import-mode=importlib",
]
